Mini Inventory System

--- a/templates/javascript-learning/new_roadmap_phase1/index.html
+++ b/templates/javascript-learning/new_roadmap_phase1/index.html
@@ -34,8 +34,7 @@
   <div class="marginS">
     <h1>Phase 1: Core Mechanics (Refined Muscle Memory)</h1>
     <br />
-    <br />
-    <h2 class="Grey700">Objective: Deepen understanding of language fundamentals by building my own “toolkit”</h2>
+    <h4 class="Grey700">Objective: Deepen understanding of language fundamentals by building my own “toolkit”</h4>
     <br />
     <br />
     <h2>Concept: Primitive vs Reference</h2>
@@ -197,6 +196,19 @@
         </tr>
       </tbody>
     </table>
+          <br />
+
+        <h5> Project: Mini Inventory System</h5>
+
+      <br />
+    <pre><code class="language-javascript">
+      let a = 10;
+      let b = a;
+      b = 20;
+      console.log(a); // 10
+      console.log(b); // 20
+    </code></pre>
+    <br />
 
 
 
