--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -19,7 +19,7 @@
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonSmall buttonPrimary bgVWGrey">PDF Resume
+          <a href="/resume2025/resume.pdf" target="_blank"> <button class="buttonSmall buttonPrimary bgVWGrey">PDF Resume
             </button></a>
           <!--buttonBlack-->
 
