--- a/templates/shared/base_divider_short.ejs
+++ b/templates/shared/base_divider_short.ejs
@@ -1,5 +1,6 @@
 <div class="blankHTiny"></div>
+<div class="blankHXS"></div>
 
 <hr class="wrapperXL">
 <div class="blankHTiny"></div>
-<div class="blankHTiny"></div>
+<div class="blankHXS"></div>
