--- a/html/main.css
+++ b/html/main.css
@@ -1762,23 +1762,19 @@ section {
 /* ===== Graph ===== */
 @media (width > 1880px) {
 body .iconAccTrigger {
-    margin: 2vh 6px !important; 
+    margin: 28px 6px !important; 
 
 }
 }
 
 @media (width > 1280px) and (width < 1880px) {
 body .iconAccTrigger {
-    margin: 1.3vh 6px !important; 
+    margin: 22px 6px !important; 
 
 }
 }
 
 @media all and (min-width: 1880px) {
-  /* body .iconAccTrigger {
-    margin: 1.6em 6px;
-  } */
-
   body .blankMin1880 {
     height: 2em;
   }
