--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="colorBgVW pattern1">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:false, Title:'Workshelf | Vicky Wang', 
+<%- include(`${templatePath}/shared/head`, {SEO:false, Title:'Caselog | Vicky Wang', 
   description:'A snapshot of what I focus on and build.', 
   pageURL:'', thumbnailImgURL: 'vickywang_photography.png'
   }) %>
